src/components/PostInfo/PostInfo.scss
.post-info {
    display: flex;
    flex-direction: column;
    font-family: $font-family-primary;
    margin-right: spacer(small-m);
    width: 100%;

    &.-space {
        height: 240px;
        justify-content: space-between;

        @include if-tablet {
            height: 350px;
        }

    }

    @include if-tablet {
        margin-right: spacer(medium-s);
    }

    @include if-desktop {
        margin-right: spacer(medium-l);
    }

    &__title {
        color: theme-color("accent-1");
        font-size: $fonts-size-text;
        font-weight: $font-weight-fat;
        line-height: $line-height-small;
        margin-bottom:  spacer(small-xl);
        text-transform: uppercase;

        &.-white {
            color: theme-color("white")
        }
    }

    &__subtitle {
        color: theme-color("active");
        font-size: $fonts-size-text;
        font-weight: $font-weight-fat;
        line-height: $line-height-small;
        margin-bottom: spacer(small-s);

        &.-white {
            color: theme-color("white");
            font-size: $fonts-size-h1;
        }

        &.-space {
            margin-top: auto;
        }
    }

    &__text {
        color: theme-color("inactive");
        font-size: $fonts-size-text;
        line-height: $line-height-medium;
        margin-bottom: spacer(small-s);

        &.-white {
            margin-top: spacer(small-s);
            color: theme-color("white")
        }
    }
}

